@@ -5,25 +5,24 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Supplier;
 
-public final class VirtualThreadOven implements AutoCloseable {
+public class DedicatedPoolThreadOven implements AutoCloseable {
 
     private final ExecutorService executor;
 
-    public VirtualThreadOven() {
-        this.executor = Executors.newVirtualThreadPerTaskExecutor();
+    public DedicatedPoolThreadOven() {
+        this.executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
     }
 
     public <T> CompletableFuture<T> submit(Supplier<T> task) {
         return CompletableFuture.supplyAsync(task, executor);
     }
 
-      public void waitAll(CompletableFuture<?>... futures) {
-          CompletableFuture.allOf(futures).join();
-      }
-
+    public void waitAll(CompletableFuture<?>... futures) {
+        CompletableFuture.allOf(futures).join();
+    }
 
     @Override
-    public void close() {
-        executor.shutdown();
+    public void close() throws Exception {
+    executor.shutdown();
     }
 }
